# rabbitmq-server

./: .bazelrc  .travis.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  config.js  dist.bzl  install.sh  rabbitmq.bzl  rabbitmq_run.bzl  workspace_helpers.bzl
.github/workflows/: oci-base.yaml  oci.yaml  perform-bazel-execution-comparison.yaml  rabbitmq_peer_discovery_aws.yaml  test-erlang-git.yaml  test-mixed-versions.yaml  test-windows.yaml  test.yaml
bazel/bzlmod/: extensions.bzl
bazel/elixir/: BUILD.bazel  elixir.bzl  elixir_build.bzl  elixir_toolchain.bzl
tools/: erlang_ls.bzl
